force-app/main/default/objects/Application_Assessment__c/Application_Assessment__c.object-meta.xml
<CustomObject>
    <label>Application Assessment.</label>
    <nameField>
        <displayFormat>AAS-{000000}</displayFormat>
        <label>Application Assessment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Assessment.</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>