force-app/main/default/objects/Application_Assessment__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>ApplicationToDoList__c</referenceTo>
    <relationshipLabel>Application Assessment.</relationshipLabel>
    <relationshipName>Application_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>