force-app/main/default/objects/Application_Assessment__c/fields/ActionStep__c.field-meta.xml
<CustomField>
    <fullName>ActionStep__c</fullName>
    <formula>TEXT(Action__r.Action__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Step</label>
    <type>Text</type>
</CustomField>