force-app/main/default/objects/Application_Assessment__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Applicationn__c</referenceTo>
    <relationshipLabel>Application Assessment.</relationshipLabel>
    <relationshipName>Application_Assessment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>