force-app/main/default/objects/Application_Assessment__c/fields/AssessorUser__c.field-meta.xml
<CustomField>
    <fullName>AssessorUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>