force-app/main/default/objects/Application_Assessment__c/fields/Question_Asked__c.field-meta.xml
<CustomField>
    <fullName>Question_Asked__c</fullName>
    <label>Question Asked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>